# r2live

./: r2live_test_log.txt  r2live测试记录.txt
base_controller/: CMakeLists.txt  odom.rules  package.xml  yun.rules
base_controller/action/: Inspect.action
base_controller/include/: base_controller.h  robot.h  serial.h
base_controller/launch/: calibrate.launch  gyro.launch  nav.launch  nav_test.launch  velo.launch  view_nav.launch
base_controller/msg/: CSGMagneticCtrl.msg  CSGMagneticInfo.msg  CSGMapInfo.msg  CSGVisionNavCtrl.msg  Error.msg  NavParams.msg  csgPoseStampedMatchValue.msg  csgPoseStampedRoute.msg
base_controller/scripts/: odom_rules  yun_rules
base_controller/src/: base_nav.cpp  base_nav_CRC.cpp  base_nav_异或.cpp  current_pub.cpp  joy_controller.cpp  joy_node.cpp  odom_test.cpp  serial.cpp  zreadme.txt
config/: dh_cam.yaml  dh_cam_v1.yaml  dh_cam_v2.yaml  dh_cam_v2h.yaml  filr_cam.yaml  filr_cam_0721.yaml  filr_cam_csg.yaml  lio_config.yaml  lio_config_0721.yaml  lio_config_csg.yaml  lio_config_v1.yaml  lio_config_v2.yaml
config/rviz/: vins_rviz_config.rviz
feature_tracker/src/: feature_tracker.cpp  feature_tracker_node.cpp  parameters.cpp
loop_closure_gtsam/: CMakeLists.txt  package.xml
loop_closure_gtsam/include/Util/: util.h
loop_closure_gtsam/include/loop_closure_gtsam/: LaserLoopClosure_time.h  gridMap.h
loop_closure_gtsam/launch/: gtsam_loop.launch  loop_closure_gtsam_offline.launch  loop_closure_gtsam_v1.launch  loop_closure_gtsam_v2.launch
loop_closure_gtsam/src/: LaserLoopClosure_time.cc  loop_closure_gtsam.cpp  loop_closure_gtsam_tf2.cpp
loop_closure_gtsam/srv/: LoopTimePair.srv
odom/: CMakeLists.txt  package.xml
odom/include/odom/: LaserLoopClosure.h  LaserLoopClosure_time.h
odom/include/parameter_utils/: ParameterUtils.h
odom/launch/: gtsam_loop.launch
odom/src/: LaserLoopClosure.cc  LaserLoopClosure_time.cc  LaserLoopClosure_time_service.cc  down_filtered_pcd.cpp  get_bds_by_two_odom.cpp  get_two_msg.cpp  livox_to_pointcloud2.cpp  loop_closure_gtsam.cpp  loop_closure_gtsam_tf2.cpp  optimize_lio_path_z.cpp  optimize_map.cpp  optimize_map_gtsam.cpp  optimize_map_gtsam_time.cpp  optimize_map_gtsam_time_all_pc.cpp  optimize_map_tf.cpp  reproject_r2live_path.cpp  rotation_pcd_to_horizon_pcl.cpp  undistorted.cpp
pose_graph/: CMakeLists.txt  package.xml
pose_graph/launch/: pose_graph_v1.launch  pose_graph_v2.launch
pose_graph/src/: keyframe.cpp  keyframe.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
r2live/: CMakeLists.txt
r2live/launch/: demo.launch  get_surf_points.launch  pose_graph.launch  tf.launch
r2live/src/: double_intergration_imu.cpp  estimator.cpp  estimator_node.cpp  estimator_optimization.cpp  parameters.cpp  parameters.h  save_registered_cloud.cpp  vio_marginalization.hpp
r2live/src/fast_lio/: IMU_Processing.cpp  fast_lio.hpp  fast_lio_bak.hpp  feature_extract.cpp
r2live/src/fast_lio/include/: common_lib.h
r2live/src/initial/: initial_aligment.cpp  initial_sfm.cpp  solve_5pts.cpp
r2live/src/tools/r2live_sophus/: common.hpp  rotation_matrix.hpp
r2live/src/utility/: visualization.cpp
